k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-management-system
  labels:
    app: library-management-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-management-system
  template:
    metadata:
      labels:
        app: library-management-system
    spec:
      containers:
      - name: library-management-system
        image: thilina01/library-management-system:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-logs
          mountPath: /app/logs
      volumes:
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
