k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-management-system
spec:
  selector:
    app: library-management-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
